# ChoomLang

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  LICENSE  README.md  RELEASE.md  grammar.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
apps/wallpaper/: README.md
apps/wallpaper/scripts/: pack_fast.choom  pack_hd.choom
docs/: STABILITY.md  VERSIONING.md
examples/: README.md  dsl.txt  json.txt  wallpaper_pack.choom  wallpaper_pack_hd.choom  workflow_v010.choom
profiles/: brief_writer.json  classify_basic.json  code_review.json  echo_tool.json  osint_basic.json  photoreal_portrait.json  plan_project.json  product_shot.json  schema.json  sdxl_cyberpunk_bg.json  summarize.json  wallpaper.json  write_file_safe.json  writing_outline.json
src/choomlang/: __init__.py  adapters.py  cli.py  dsl.py  errors.py  llm.py  profiles.py  protocol.py  registry.py  relay.py  run.py  runner.py  teach.py  translate.py
tests/: test_adapters_a1111.py  test_cli.py  test_dsl.py  test_examples_lint.py  test_golden.py  test_profiles_lint_run.py  test_registry.py  test_relay.py  test_runner.py
tests/golden/: dsl_cases.txt  dsl_invalid.txt  dsl_valid.txt  expected_fmt.txt  schema.json
